# linux-voice

./: .gitignore  PKGBUILD  README.md  linux-voice-0.1.0-1-any.pkg.tar.zst  linux-voice.py  linux-voice.service  platform_support.py  pyproject.toml  requirements.txt
pkg/linux-voice/: .BUILDINFO  .MTREE  .PKGINFO
pkg/linux-voice/usr/lib/systemd/user/: linux-voice.service
pkg/linux-voice/usr/share/doc/linux-voice/: README.md
src/: LICENSE  README.md  linux-voice.py  linux-voice.service
